<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <artifactId>jdi-dark-bdd-tests</artifactId>
    <name>JDI Dark BDD Tests</name>
    <version>1.1.12</version>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <aspectj.version>1.9.5</aspectj.version>
        <allure.maven.version>2.10.0</allure.maven.version>
        <allure.common.version>2.20.1</allure.common.version>
        <junit.version>4.12</junit.version>
        <surefire.version>2.22.2</surefire.version>
        <jdi.dark.bdd.version>1.1.12</jdi.dark.bdd.version>
        <cucumber.version>7.10.1</cucumber.version>
        <!-- use jdk16 profile for JDK 16+ -->
        <aspectj.args></aspectj.args>
    </properties>

    <profiles>
        <profile>
            <id>jdk16</id>
            <properties>
                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!--JDI-->
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-dark-bdd</artifactId>
            <version>${jdi.dark.bdd.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-java-commons</artifactId>
            <version>${allure.common.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber7-jvm</artifactId>
            <version>${allure.common.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <!-- testFailureIgnore>true</testFailureIgnore -->
                    <argLine>
                        ${aspectj.args}
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.version}</version>
                <configuration>
                    <reportVersion>2.13.2</reportVersion>
                    <allureDownloadUrl>
                        https://dl.bintray.com/qameta/maven/io/qameta/allure/allure-commandline/2.13.2/allure-commandline-2.13.2.zip
                    </allureDownloadUrl>
                </configuration>
            </plugin>
        </plugins>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
    </build>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>LATEST</version>
                <configuration>
                    <properties>
                        <allure.results.directory>target/allure-results</allure.results.directory>
                    </properties>
                    <properties>
                        <allure.link.issue.pattern>https://example.org/issue/{}</allure.link.issue.pattern>
                    </properties>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>